--- a/subscribe.html
+++ b/subscribe.html
@@ -10,13 +10,13 @@ permalink: /subscribe/
 <div id="letterhead-title">Sell More Homes In Less Time</div>
 <p>Get access to our own internal training we provide our agents.</p></div>
 <hr>
-<!-- <p>Dear Real Estate Agent:</p>
+<p>Dear Real Estate Agent:</p>
 
-<p>Are you looking for training that teaches you exactly what you need to do to sell homes specifically right here in {{site.data.settings.client.market}}?</p>
+<p>Are you looking for training that teaches you exactly what you need to do to sell homes specifically right here in Fort Wayne?</p>
 
 <p>I invite you to subscribe to our free real estate agent training newsletter.</p>
 
-<p>Every two weeks, we publish helpful tips for you. These include:
+<p>Every two weeks, we publish helpful tips for you; which includes:
 <ol class="indent">
 <li>Real agent success stories</li>
 <li>Question and answer videos</li>
@@ -26,13 +26,13 @@ permalink: /subscribe/
 
 <p>Our goal is to give you a taste of the training we provide if you have any interest in working with us in the future.</p>
 
-<p>We have no intention of recruiting you - that’s a conversation with us when you are ready, if at all.</p>
+<p><strong>We have no intention of recruiting you</strong> - that’s a conversation with us when you are ready, if at all.</p>
 
-<p>Last year 28,824 homes sold in the greater {{site.data.settings.client.market}} market.</p>
+<p>Last year over 5000 homes sold in the greater Fort Wayne market.</p>
 
 <p>That’s plenty of business to go around for all of us.</p>
 
-<p>We’ve been fortunate to sell 179 homes last year and our average agent earns six figures a year with us.</p>
+<p>We’ve been fortunate to sell over 150 homes last year and our average full-time agent earns $161,000 a year with us.</p>
 
 <p>The same training they get will help you do it as well.</p>
 
@@ -44,11 +44,11 @@ permalink: /subscribe/
 <li>Win more listing presentations at full commission</li>
 <li>Systematize your administrative processes</li>
 <li>Earn more referrals and reviews for repeat business</li>
-</oL></p>
+</ol></p>
 
 <p>…I invite you to subscribe to our free newsletter below.</p>
 
-<hr>
+<!--<hr>
 <div class="testimonial-inline">
 <p><strong>Here’s what a few agents say about our free training:</strong></p>
 
@@ -58,16 +58,19 @@ permalink: /subscribe/
 
 <p class="testimonial-text indent">“This training is great!” <span class="testimonial-author">- Bob</span></p>
 </div>
-<hr>
+<hr>-->
 
-<p>You are also welcome to subscribe to our Agent Training Podcast on iTunes and we also publish our free training content on our agent training Facebook page if you prefer to stay touch</p> that way, too.
+<p>But don’t just take my word for it. Let me tell you the success story of someone who was once in your same position. Last year, an agent who was seeing moderate success but lacked direction at his previous job came to join our team full time. Within his first full year, he’s become a high producer, on track to sell $6 million in real estate and earning about $136,000 for himself. This was all achieved by leveraging the same systems and instructions we offer every agent who joins us.</p>
 
-<p>Most importantly, everything you receive is designed to start a conversation. So, if you have any questions about selling real estate you can email me at <a href="mailto:{{site.data.settings.client.email}}">{{site.data.settings.client.email}}</a></p>
+<p>You are also welcome to subscribe to our Agent Training Podcast on iTunes and we also publish our free training content on our <a href="https://www.facebook.com/fortwaynerealestatemastermind/" target="_blank">Fort Wayne Real Estate Agent Mastermind Facebook page</a> if you prefer to stay touch that way, too.</p>
+
+<p>Most importantly, everything you receive is designed to start a conversation. So, if you have any questions about selling real estate you can email me at <a href="mailto:careers@anthonyrealtors.com">careers@anthonyrealtors.com</a>. </p>
 
 <p>I’ll first answer your question by email, and if I think it would be of benefit to more people, I’ll answer it in a video.</p>
 
-<p>We look forward to staying in touch. Let’s raise the standard and training of all real estate agents in our {{site.data.settings.client.market}}.</p>
+<p>We look forward to staying in touch. Let’s raise the standard and training of all real estate agents in Fort Wayne.</p>
 
-<p>I invite you to subscribe now below:</p> -->
+<p>I invite you to subscribe now below:</p>
+
 {% include subscribe.html %}
 </div>
